[package]
name = "nano-vanity"
version = "0.4.14"
description = "Generate NANO cryptocurrency addresses with a given prefix"
keywords = ["cryptocurrency", "nanocurrency", "opencl"]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PlasmaPower/nano-vanity"
license = "BSD-2-Clause"

[features]
gpu = ["ocl"]
default = ["gpu"]
apple = []

[dependencies]
blake2 = "0.10.6"
clap = "4.5.21"
num_cpus = "1.16.0"
num-bigint = "0.4.6"
rand = "0.8.5"
hex = "0.4.3"
digest = "0.10.7"
num-traits = "0.2.19"
ocl = { version = "0.19.7", optional = true, features = ["opencl_version_2_0"] }
curve25519-dalek = "4.1.3"
byteorder = "1.5.0"